--- a/Pemrograman.web/Praktikum7/CSSPadding.html
+++ b/Pemrograman.web/Praktikum7/CSSPadding.html
@@ -13,7 +13,7 @@
             margin-top: 10px;
             margin-left: 30px;
             border-left: 5px dashed gray;
-            padding: 25px;
+            padding-left: 25px;
         }
         
         .dua{
@@ -22,7 +22,7 @@
             background-color: gray;
             margin-left: 50px;
             border-top: 10px dotted greenyellow;
-            padding: 30px;
+            padding-top: 30px;
         }
     </style>
 </head>
