Add CSS styles for floating images

--- a/Pemrograman.web/Praktikum7/CSSFloat1.html
+++ b/Pemrograman.web/Praktikum7/CSSFloat1.html
@@ -12,6 +12,15 @@
             width: 500px;
             padding: 5px;
         }
+        .gambar{
+            height: 150px;
+            width: 150px;
+            float: left;
+            margin: 5px;
+        }
+        .clear{
+            clear: left;
+        }
     </style>
 </head>
 <body>
