--- a/Pemrograman.web/Praktikum7/CSSFloat1.html
+++ b/Pemrograman.web/Praktikum7/CSSFloat1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Float 1</title>
+    <title>Float</title>
     <style>
         .container{
             background-color: red;
