Fix comment syntax for alert box in HTML

--- a/Pemrograman.web/Praktikum8/DasarJavascript.html
+++ b/Pemrograman.web/Praktikum8/DasarJavascript.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script language="Javascript">
-        <!- window.alert("Ini merupakan pesan untuk anda");//->
+        <!-- window.alert("Ini merupakan pesan untuk anda");//-->
     </script>
 </body>
 </html>
