Add JavaScript examples and HTML structure

--- a/Pemrograman.web/Praktikum8/DasarJavascript.html
+++ b/Pemrograman.web/Praktikum8/DasarJavascript.html
@@ -11,3 +11,35 @@
     </script>
 </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Skrip Javascript</title>
+</head>
+<body>
+    Percobaan memakai Javascript:<br>
+    <script language="Javascript">
+        document.write("Selamat mencoba Javascript<br>");
+        document.write("Semoga Sukses<br>");
+    </script>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pemasukan Data</title>
+</head>
+<body>
+    <script language="Javascript">
+        <!--
+            var nama = prompt("siapa nama Anda?",nama="Masukan nama anda");
+            document.write("Hai, "+nama);
+         -->
+    </script>
+</body>
+</html> TIF FT UNIPMA
